[package]
name = "unpinnerbot"
version = "0.1.0"
authors = ["handlerug <umar@handlerug.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
teloxide = { git = "https://github.com/teloxide/teloxide", branch = "dev", default-features = false, features = ["auto-send", "throttle", "rustls"] }
tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[patch.crates-io]
teloxide-core = { git = "https://github.com/teloxide/teloxide-core" }
