[package]
name = "unpinnerbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
teloxide = { version = "0.7", default-features = false, features = ["auto-send", "throttle", "rustls", "ctrlc_handler", "dispatching2", "cache-me"] }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
