[package]
name = "unpinnerbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.9.2", default-features = false, features = ["auto-send", "throttle", "rustls", "ctrlc_handler", "cache-me"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
futures = "0.3.21"
